[tool.poetry]
name = "mergepdf"
version = "0.1.0"
description = ""
authors = ["Len Blum <lenemilianblum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pypdf = "^5.1.0"
reportlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mergepdf = "mergepdf:start"